--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "@jamescoyle/vue-icon": "^0.1.2",
+    "@mdi/js": "^7.2.96",
+    "vue": "^3.2.47"
   },
   "devDependencies": {
     "@types/node": "^18.14.2",
