--- a/.github/workflows/deploy-ghpages.yml
+++ b/.github/workflows/deploy-ghpages.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Copy built files
         run: |
           rm -rf *
-          cp -r ../dist/* .
+          cp -r ./dist/* .
 
       # Configure git
       - name: Configure git
