--- a/.github/workflows/deploy-ghpages.yml
+++ b/.github/workflows/deploy-ghpages.yml
@@ -1,26 +1,50 @@
-name: Deploy to Github Pages
+name: Build and Deploy to Test Branch
 run-name: ${{ github.actor }} is deploying code to Github Pages 🚀
+
 on:
   push:
     branches:
       - main
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    steps:
-      - name: List directories in a directory
-        run: |
-          echo "Listing directories:"
-          for dir in $(ls -d */); do
-            echo $dir
-          done
 
-      # Deploy to local repo
-      - name: Deploy
-        uses: s0/git-publish-subdir-action@develop
-        env:
-          REPO: self
-          BRANCH: test
-          FOLDER: ./dist
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - name: Checkout main branch
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Needed to push to another branch
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18  # Use your desired Node.js version
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build project
+        run: npm run build
+
+      - name: Deploy dist to test branch
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+
+          # Create a temporary directory
+          mkdir temp-dist
+          cp -R dist/* temp-dist/
+
+          # Switch to test branch
+          git checkout test || git checkout --orphan test
+
+          # Remove everything and copy build
+          git rm -rf . > /dev/null 2>&1 || true
+          cp -r temp-dist/* .
+          rm -rf temp-dist
+
+          # Commit and push
+          git add .
+          git commit -m "Deploy to test branch from main"
+          git push origin test --force
