Remove Testimonial & adjust action

--- a/.github/workflows/deploy-ghpages.yml
+++ b/.github/workflows/deploy-ghpages.yml
@@ -3,54 +3,32 @@ run-name: ${{ github.actor }} is deploying code to Github Pages 🚀
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  # Allows you to run this workflow manually from the Actions tab on GitHub.
+  workflow_dispatch:
+
+# Allow this job to clone the repo and create a page deployment
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout main branch
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
+      - name: Checkout your repository using git
+        uses: actions/checkout@v4
+      - name: Install, build, and upload your site
+        uses: withastro/action@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build project
-        run: npm run build
-
-      - name: Prepare dist for deployment
-        run: |
-          mkdir ../dist-temp
-          cp -r dist/* ../dist-temp/
-          echo "w3bl.com" > ../dist-temp/CNAME
-          touch ../dist-temp/.nojekyll
-
-      - name: Switch to gh-pages branch and deploy
-        run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-
-          # Clean up before switching
-          git clean -fdx
-          git checkout gh-pages || git checkout --orphan gh-pages
-
-          # Remove all tracked files
-          git rm -rf . --ignore-unmatch
-
-          # Copy built files into repo
-          cp -r ../dist-temp/* .
-          rm -rf ../dist-temp
-
-          # Commit and push
-          git add .
-          git commit -m "Deploy to gh-pages branch from main"
-          git push origin gh-pages --force
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
